release/src/router/dbus-1.8.8/test/data/valid-messages/standard-acquire-service.message
# Standard org.freedesktop.DBus.AcquireService message

VALID_HEADER method_call
HEADER_FIELD PATH
TYPE OBJECT_PATH
OBJECT_PATH '/org/freedesktop/DBus'
HEADER_FIELD INTERFACE
TYPE STRING
STRING 'org.freedesktop.DBus'
HEADER_FIELD MEMBER
TYPE STRING
STRING 'AcquireService'
HEADER_FIELD DESTINATION
TYPE STRING
STRING 'org.freedesktop.DBus'
HEADER_FIELD SIGNATURE
TYPE STRING
STRING 'su'
ALIGN 8
END_LENGTH Header
START_LENGTH Body
TYPE STRING
STRING 'org.freedesktop.DBus.Sample'
TYPE UINT32
UINT32 0
END_LENGTH Body
