release/src/router/dbus-1.8.8/test/data/invalid-messages/bad-endian.message
## message with invalid endianness tag

BYTE 'i'
BYTE 1
BYTE 0
BYTE 0

LENGTH Header
LENGTH Body

HEADER_FIELD INTERFACE
TYPE STRING
STRING 'org.freedesktop.Foo'
HEADER_FIELD MEMBER
TYPE STRING
STRING 'Bar'
HEADER_FIELD PATH
TYPE OBJECT_PATH
OBJECT_PATH '/foo'

ALIGN 8
END_LENGTH Header

START_LENGTH Body
END_LENGTH Body
